# self_guard

./: CMakeLists.txt  LICENSE  Makefile  README.md  README_PORTABILITY.md
examples/: main.c
include/: self_guard.h  self_guard_asm.h
src/: asm_dispatch.c  guard_core.cpp  self_guard.c
src/asm/: asm_arm64.S  asm_stub.c  asm_x86_64.S
